--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-elements",
+  "name": "debox-react-native-elements",
   "version": "1.0.0-beta5",
   "description": "React Native Elements & UI Toolkit",
   "main": "src/index.js",
