--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deboxsoft/react-native-elements",
-  "version": "1.0.0-beta7",
+  "version": "1.0.0-dbx-beta-1",
   "description": "React Native Elements & UI Toolkit",
   "main": "src/index.js",
   "types": "src/index.d.ts",
